[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylockly"
version = "0.1.0"
description = "Python client for the Lockly Cloud API (REST + MQTT)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "amasolov" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohttp>=3.9",
    "aiomqtt>=2.0",
    "pycryptodome>=3.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
